# gitsplits

./: .env.example  .eslintrc.json  .gitignore  Caddyfile  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  firestore.rules  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  test-web.js  tsconfig.json
agent/: .env.example  Caddyfile  DEPLOYMENT.md  Dockerfile.eigen  README.md  jest.config.js  package-lock.json  package.json  test-github.js
agent/deploy/: EIGENCOMPUTE.md  (+2 more)
contracts/: README.md
contracts/near/: CONTRACT_DETAILS.md  Cargo.toml  Cargo.toml.simple
contracts/near/src/: lib.rs  lib.rs.final  lib.rs.fixed  lib.rs.new  lib.rs.simple
docs/: COMMANDS.md  EXPANSION_PLAN.md  GUIDE.md  IMPLEMENTATION_SUMMARY.md  PHALA_CUTOVER_RUNBOOK.md  PLATFORM.md  PLATFORM_VISION.md  PRODUCT_DESIGN.md  README.md  SETUP.md  SHADE_AGENTS.md  SOVEREIGN_MONOLITH_ARCHITECTURE.md  SPONSORS.md  TEAM_SETUP.md  architecture.md  contract-api.md  deployment.md  identity-verification.md  twitter-cookie-auth-guide.md  twitter-setup-guide.md  worker-api.md  worker-registration-guide.md  x-commands.md
scripts/: README.md  deploy-to-server.sh  deploy.sh  fix-twitter-auth.sh  get-twitter-cookies.sh  run-farcaster-bot.sh  run-local.sh  run-mock-worker.sh  secret-scanner.js  setup-farcaster.ts  setup-server-env.sh  test-twitter-auth.sh  test-twitter-endpoints.sh
src/: config.ts
worker/: .env.example  Dockerfile  docker-compose.yml  index.js  package.json  test-commands.sh  twitter2FAClient.js  twitterClient.js
(+226 files in other folders)
