[package]
name = "gitsplits-x-agent"
version = "0.1.0"
authors = ["GitSplits Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.12.0", features = ["legacy"] }
borsh = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.12"
# Replacing phala-attestation with a simple struct implementation
# We'll implement a basic attestation structure ourselves
