[package]
name = "gitsplits-x-agent"
version = "0.1.0"
authors = ["GitSplits Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.12"
borsh = "1.0.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
strip = true
